# amazon_api

./: pyproject.toml
src/core/settings/: base.py
