[tool.poetry]
name = "amazon-api"
version = "0.1.0"
description = "Amazon Unofficial API"
authors = ["reski nopriandi <reskinopriandi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
